# rust-gif-parser

./: Cargo.toml
.cargo/: config.toml
docs/: gif87a.txt  gif89a.txt
notes/: gif87a.tex
src/: gif.rs  lib.rs  parser.rs
